--- a/res/layout/view_addcontact_itemrespond.xml
+++ b/res/layout/view_addcontact_itemrespond.xml
@@ -11,31 +11,34 @@
         android:layout_width="@dimen/view_contactlistitem_picture"
         android:layout_height="@dimen/view_contactlistitem_picture"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/background_contact_picture"
         android:contentDescription="@string/contdesc_contactimage"
         android:padding="1dp"
         android:src="@drawable/default_user_image" />
 
-    <ImageView
+    <Button
         android:id="@+id/newcontact_deny_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_gravity="right|center_vertical"
-        android:background="@drawable/background_button_denyrequest"
+        android:layout_gravity="end|center_vertical"
+        android:background="@drawable/background_button_circlegray"
         android:padding="4dp"
         android:src="@drawable/deny_icon_white" />
 
-    <ImageView
+    <Button
         android:id="@+id/newcontact_confirm_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_gravity="right|center_vertical"
+        android:layout_gravity="end|center_vertical"
         android:layout_toLeftOf="@id/newcontact_deny_button"
-        android:background="@drawable/background_button_acceptrequest"
+        android:layout_toStartOf="@id/newcontact_deny_button"
+        android:background="@drawable/background_button_circleteal"
         android:padding="4dp"
         android:src="@drawable/accept_icon_white" />
 
@@ -46,8 +49,12 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_toLeftOf="@id/newcontact_confirm_button"
-        android:layout_toRightOf="@id/newcontact_picture" />
+        android:layout_toStartOf="@id/newcontact_confirm_button"
+        android:layout_toRightOf="@id/newcontact_picture"
+        android:layout_toEndOf="@id/newcontact_picture" />
 
 </RelativeLayout>
