--- a/res/layout/view_addcontact_itemsend.xml
+++ b/res/layout/view_addcontact_itemsend.xml
@@ -13,6 +13,7 @@
         android:layout_width="@dimen/view_contactlistitem_picture"
         android:layout_height="@dimen/view_contactlistitem_picture"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/background_contact_picture"
         android:contentDescription="@string/contdesc_contactimage"
@@ -21,12 +22,13 @@
 
     <CheckBox
         android:id="@+id/newcontact_senditem_button"
-        android:layout_width="60dp"
-        android:layout_height="45dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_gravity="right|center_vertical"
-        android:button="@drawable/background_button_contactrequest" />
+        android:layout_gravity="end|center_vertical"
+        android:background="@drawable/background_button_circleteal"/>
 
     <TextView
         android:id="@+id/newcontact_name"
@@ -35,8 +37,12 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_toLeftOf="@id/newcontact_senditem_button"
-        android:layout_toRightOf="@id/newcontact_picture" />
+        android:layout_toStartOf="@id/newcontact_senditem_button"
+        android:layout_toRightOf="@id/newcontact_picture"
+        android:layout_toEndOf="@id/newcontact_picture" />
 
 </RelativeLayout>
