--- a/res/menu/menu_account.xml
+++ b/res/menu/menu_account.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:title="@string/edit" android:id="@+id/menu_account_edit" android:showAsAction="ifRoom"></item>
-    
+
+    <item
+        android:id="@+id/menu_account_edit"
+        android:icon="@drawable/ic_menu_edit"
+        android:showAsAction="ifRoom"
+        android:title="@string/edit">
+    </item>
+    <item
+        android:id="@+id/action_activity"
+        android:icon="@drawable/ic_menu_activity"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_activity"/>
 
 </menu>
