--- a/res/menu/menu_home.xml
+++ b/res/menu/menu_home.xml
@@ -6,23 +6,9 @@
         android:showAsAction="ifRoom"
         android:title="@string/menu_newevent"/>
     <item
-        android:id="@+id/action_notifications"
-        android:icon="@drawable/ic_notifications"
+        android:id="@+id/action_activity"
+        android:icon="@drawable/ic_menu_activity"
         android:showAsAction="ifRoom"
-        android:title="@string/menu_notifications"/>
-    <item
-        android:id="@+id/action_refresh"
-        android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="never"
-        android:title="@string/menu_refresh"/>
-    <item
-        android:id="@+id/action_settings"
-        android:icon="@drawable/ic_menu_manage"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
-    <item
-        android:id="@+id/action_signout"
-        android:showAsAction="never"
-        android:title="@string/menu_signout"/>
+        android:title="@string/menu_activity"/>
 
 </menu>
