--- a/res/menu/menu_event_hosted.xml
+++ b/res/menu/menu_event_hosted.xml
@@ -3,44 +3,20 @@
     
     <item
         android:id="@+id/menu_event_cancel"
-        android:checkable="true"
         android:icon="@drawable/ic_leave"
         android:orderInCategory="0"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="@string/join"/>
     <item
         android:id="@+id/menu_event_seereposts"
-        android:icon="@drawable/ic_repost"
         android:orderInCategory="1"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="@string/repost"/>
     <item
         android:id="@+id/menu_event_directions"
-        android:icon="@drawable/ic_menu_compass"
+        android:icon="@drawable/ic_location"
         android:orderInCategory="2"
         android:showAsAction="never"
         android:title="@string/directions"/>
-    <item
-        android:id="@+id/menu_event_refresh"
-        android:orderInCategory="3"
-        android:showAsAction="never"
-        android:title="@string/menu_refresh"/>
-    
-    <item
-        android:id="@+id/menu_event_invite"
-        android:orderInCategory="4"
-        android:showAsAction="never"
-        android:title="@string/invite"/>
-    
-    <item
-        android:id="@+id/menu_event_masstext"
-        android:orderInCategory="5"
-        android:showAsAction="never"
-        android:title="@string/mass_text"/>
-    <item
-        android:id="@+id/menu_event_massemail"
-        android:orderInCategory="6"
-        android:showAsAction="never"
-        android:title="@string/mass_email"/>
 
 </menu>
