--- a/res/drawable/ic_tab_feed.xml
+++ b/res/drawable/ic_tab_feed.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_focused="true" android:drawable="@drawable/ic_feed_filled"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/ic_feed_filled" android:state_pressed="true"/>
+    <item android:drawable="@drawable/ic_feed_filled" android:state_selected="true"/>
+    <item android:drawable="@drawable/ic_feed_filled" android:state_focused="true"/>
     <item android:drawable="@drawable/ic_feed_empty"/>
+
+    <!--
+    <item android:drawable="@drawable/ic_feed_filled" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_feed_empty" android:state_checked="false"/> 
+    -->
 
 </selector>
