--- a/res/layout/activity_account.xml
+++ b/res/layout/activity_account.xml
@@ -10,22 +10,24 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/newuseractivity_cancel"
+            android:id="@+id/accountactivity_cancel"
             style="?android:attr/actionBarTabStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableLeft="@drawable/cancel_icon"
+            android:drawableStart="@drawable/cancel_icon"
             android:gravity="center"
             android:text="@string/cancel" />
 
         <Button
-            android:id="@+id/newuseractivity_create"
+            android:id="@+id/accountactivity_confirm"
             style="?android:attr/actionBarTabStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableLeft="@drawable/done_icon"
+            android:drawableStart="@drawable/done_icon"
             android:gravity="center"
             android:text="@string/done" />
     </LinearLayout>
@@ -49,65 +51,64 @@
                 android:layout_height="wrap_content" >
 
                 <ImageView
-                    android:id="@+id/newuseractivity_image"
+                    android:id="@+id/accountactivity_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:scaleType="centerCrop"
                     android:layout_margin="5dp"
-                    android:background="@drawable/background_contact_picture" />
+                    android:background="@drawable/background_contact_picture"
+                    android:contentDescription="@string/contdesc_contactimage"
+                    android:src="@drawable/default_user_image" />
 
                 <EditText
-                    android:id="@+id/newuseractivty_givenname"
+                    android:id="@+id/accountactivity_givenname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_margin="3dp"
                     android:layout_marginTop="20dp"
-                    android:layout_toRightOf="@id/newuseractivity_image"
+                    android:layout_toEndOf="@id/accountactivity_image"
+                    android:layout_toRightOf="@id/accountactivity_image"
+                    android:hint="@string/hint_givenname"
+                    android:inputType="textPersonName"
                     android:maxLines="1" />
 
                 <EditText
-                    android:id="@+id/newuseractivty_familyname"
+                    android:id="@+id/accountactivity_familyname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/newuseractivty_givenname"
+                    android:layout_below="@id/accountactivity_givenname"
                     android:layout_margin="3dp"
                     android:layout_marginTop="5dp"
-                    android:layout_toRightOf="@id/newuseractivity_image"
+                    android:layout_toEndOf="@id/accountactivity_image"
+                    android:layout_toRightOf="@id/accountactivity_image"
+                    android:hint="@string/hint_familyname"
+                    android:inputType="textPersonName"
                     android:maxLines="1" />
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/newuseractivity_email"
+                android:id="@+id/accountactivity_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:drawableLeft="@drawable/ic_mail_image"
                 android:drawablePadding="5dp"
+                android:drawableStart="@drawable/ic_mail_image"
                 android:textAppearance="@style/black_txt16sp" />
 
             <TextView
-                android:id="@+id/newuseractivity_phone"
+                android:id="@+id/accountactivity_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:drawableLeft="@drawable/ic_phone_image"
                 android:drawablePadding="5dp"
+                android:drawableStart="@drawable/ic_phone_image"
                 android:textAppearance="@style/black_txt16sp" />
-
-            <TextView
-                android:id="@+id/newuseractivity_calendarlayouttitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/gray_light"
-                android:text="@string/calendar_list_title" />
-
-            <LinearLayout
-                android:id="@+id/newuseractivity_calendarlayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
         </LinearLayout>
     </ScrollView>
 
