--- a/res/layout/activity_newevent.xml
+++ b/res/layout/activity_newevent.xml
@@ -96,7 +96,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/background_fragimg"
                     android:contentDescription="@string/contdesc_addexactlocation"
-                    android:src="@drawable/ic_menu_compass" />
+                    android:src="@drawable/ic_menu_location" />
 
                 <EditText
                     android:id="@+id/neweventactivity_shortlocation"
@@ -187,6 +187,14 @@
                     android:layout_toLeftOf="@id/neweventactivity_endtime"
                     android:padding="3dp" />
             </RelativeLayout>
+
+            <CheckBox
+                android:id="@+id/neweventactivity_guestmayinvite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:checked="true"
+                android:text="@string/guests_can_invite" />
 
             <EditText
                 android:id="@+id/neweventactivity_description"
