--- a/res/layout/fragment_calendar.xml
+++ b/res/layout/fragment_calendar.xml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/calfragment_calframe"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="1dp"
-    android:background="@drawable/background_fragment">
-    
-
-</FrameLayout> 
-
-<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/calfragment_calframe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="1dp"
-    android:background="@drawable/background_fragment">
-    
-	<com.tyczj.extendedcalendarview.ExtendedCalendarView 
-    android:id="@+id/calfragment_calendar"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"/>
-    
-</RelativeLayout> -->
+    android:background="@drawable/background_fragment" >
+
+<!--     <com.tyczj.extendedcalendarview.ExtendedCalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" /> -->
+
+</RelativeLayout>
