--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -5,5 +5,17 @@
     android:orientation="vertical" 
     android:background="@drawable/background_fragment">
     
+    
+    <Button 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="15dp"
+        android:gravity="center"
+        android:id="@+id/settingsfragment_delete"
+        android:background="@drawable/background_button_default"
+        android:text="Delete Zeppa Account"
+        />
+    
 
 </LinearLayout>
