Added Refresh Components
Add pull to refresh to StartMinglingActivity and Mingler fragment.
Implemented another runnable to make sure the Zeppa Calendar is Synced
and displayed if the user is using the app

--- a/res/layout/activity_startmingling.xml
+++ b/res/layout/activity_startmingling.xml
@@ -6,11 +6,11 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/feedListView"
+        android:id="@+id/startmingling_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:divider="@color/white_eggshell"
-        android:dividerHeight="10dp"/>
+        android:dividerHeight="1dp"/>
 
 </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
